[+] Liquibase dependens, application.properties, changelog xml fales and includ  new full Database. Description in xml db.changelog-0.0.1.xml [+] LoginTest class for testing start Spring Controllers Next Step include Spring Sequreti in progect for  loging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.datasource.url=jdbc:postgresql://localhost/DB_exchanger
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.generate-ddl=true
+
+#Flyway
+flyway.enable=false
+
+#Liquibase
+liquibase.enable = true
+spring.liquibase.change-log=classpath:/data/changelog/db.changelog-master.xml
