--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
             <version>42.2.5.jre7</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>3.6.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
