modif project. Sequrity two role Admin and user new users have role USER Added admin-room page. Added user-room page Added controllers for rooms. New ficha adding new message in DB, and llok all message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.datasource.url=jdbc:postgresql://localhost/DB_exchanger
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.generate-ddl=true
+spring.data.rest.base-path=/api
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 #Flyway
 flyway.enable=false
